force-app/main/default/objects/Account/fields/sims_Custom_Address_1__c.field-meta.xml
<CustomField>
    <fullName>sims_Custom_Address_1__c</fullName>
    <label>Custom Address 1</label>
    <type>Address</type>
</CustomField>