force-app/main/default/objects/Account/fields/sims_Custom_Address_2__c.field-meta.xml
<CustomField>
    <fullName>sims_Custom_Address_2__c</fullName>
    <label>Custom Address 2</label>
    <type>Address</type>
</CustomField>