force-app/main/default/objects/Account/fields/sims_Custom_Address_3__c.field-meta.xml
<CustomField>
    <fullName>sims_Custom_Address_3__c</fullName>
    <label>Custom Address 3</label>
    <type>Address</type>
</CustomField>