force-app/main/default/objects/Account/fields/sims_customAddress3_Primary__c.field-meta.xml
<CustomField>
    <fullName>sims_customAddress3_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>