force-app/main/default/objects/Account/fields/sims_Insurer_Type__c.field-meta.xml
<CustomField>
    <fullName>sims_Insurer_Type__c</fullName>
    <label>Insurer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Certified Reinsurer</fullName>
            </value>
            <value>
                <fullName>Admitted Reinsurer</fullName>
            </value>
            <value>
                <fullName>Alien Reinsurer</fullName>
            </value>
            <value>
                <fullName>Complimentary Reinsurer</fullName>
            </value>
            <value>
                <fullName>Alien &amp; Complimentary Reinsurer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>