force-app/main/default/objects/Account/fields/sims_Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>sims_Primary_Address__c</fullName>
    <label>Primary Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Address 1</fullName>
            </value>
            <value>
                <fullName>Custom Address 2</fullName>
            </value>
            <value>
                <fullName>Custom Address 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>